# pySigma-backend-sqlite

./: Taskfile.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
tests/: test_backend_sqlite.py
