[project]
name = "pySigma-backend-sqlite"
version = "0.2.0"
description = "pySigma sqlite backend"
readme = "README.md"
authors = [
    { name = "wagga" }
]
license = "LGPL-3.0-only"

[project.urls]
Repository = "https://github.com/SigmaHQ/pySigma-backend-sqlite"

[tool.poetry]
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.9"
pysigma = "1.0.0rc2"

[tool.poetry.group.dev.dependencies]
black = "^24.1"
pytest = "^8.0"
pytest-cov = "^4.1"
coverage = "^7.4"

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"